src/snapshots/rv__add_remove__tests__remove.snap
---
source: src/add_remove.rs
expression: doc.to_string()
---
[project]
name = "project_name"
# Can specify which version of R is required, could be used later in rv as R version manager?
r_version = "4.4.1"
description = ""
authors = [{name = "Bob", email="hello@acme.org", maintainer = true}]
license = "MIT"
keywords = []

# Are suggested deps also enforcing repository? Only used if you're making a library
suggests = []

# Order matters
repositories = [
    { alias = "cran", url = "whatever it is"},
    { alias = "mpn", url = "https://mpn.metworx.com/snapshots/stable/2020-09-20"},
]

dependencies = [
    "dplyr",
    { name = "some-package", repository = "mpn", install_suggestions = true },
    { name = "some-package", path = "../mpn", install_suggestions = true },
    { name = "some-package", git = "https://github.com/A2-ai/scicalc", tag = "v0.1.1", install_suggestions = true },
    { name = "some-package", git = "https://github.com/A2-ai/scicalc", commit = "bc50e550e432c3c620714f30dd59115801f89995", install_suggestions = true },
]

[project.urls]
homepage = ""
issues = ""
